Redone tag filtering and now we have only dropdown. Still didn't manage to make the placeholder appear that should not be an issue.